--- a/Lab5HomeWork/src/UserInterface/AdminCreateScreen.form
+++ b/Lab5HomeWork/src/UserInterface/AdminCreateScreen.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <NonVisualComponents>
-    <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
+    <Component class="javax.swing.ButtonGroup" name="radioUserBtnGrp">
     </Component>
   </NonVisualComponents>
   <AuxValues>
@@ -115,7 +115,7 @@
     <Component class="javax.swing.JRadioButton" name="radioCustomer">
       <Properties>
         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-          <ComponentRef name="buttonGroup1"/>
+          <ComponentRef name="radioUserBtnGrp"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Customer"/>
       </Properties>
@@ -126,7 +126,7 @@
     <Component class="javax.swing.JRadioButton" name="radioSupplier">
       <Properties>
         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-          <ComponentRef name="buttonGroup1"/>
+          <ComponentRef name="radioUserBtnGrp"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Supplier"/>
       </Properties>
