finished checkForButtonVisibility code

--- a/Lab5HomeWork/src/UserInterface/AdminCreateScreen.form
+++ b/Lab5HomeWork/src/UserInterface/AdminCreateScreen.form
@@ -96,6 +96,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtUser">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtUserKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
@@ -140,6 +143,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JPasswordField" name="txtPword">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtPwordKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JPasswordField" name="txtRePword">
     </Component>
