--- a/Lab5HomeWork/src/UserInterface/AdminCreateScreen.form
+++ b/Lab5HomeWork/src/UserInterface/AdminCreateScreen.form
@@ -123,7 +123,7 @@
         <Property name="text" type="java.lang.String" value="Customer"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="radioCustomerActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="groupingbtn"/>
       </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="radioSupplier">
@@ -133,6 +133,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Supplier"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="groupingbtn"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnBack">
       <Properties>
